--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.data:spring-data-rest-hal-explorer'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 
     // queryDSL 설정
