--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,3 +32,13 @@ spring:
       detection-strategy: annotated
   thymeleaf:
   thymeleaf3.decoupled-logic: true
+
+
+
+
+spring:
+    config.activate.on-profile: heroku
+    datasource:
+      url: ${DATABASE_URL}
+    jpa.hibernate.ddl-auto: create
+    sql.init.mode: always
