--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,9 +11,12 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/board
-    username: minsang
-    password: minsang
+#    url: jdbc:mysql://localhost:3306/board
+#    username: minsang
+#    password: minsang
+    url: ${DATABASE_URL}
+    username: ${USER}
+    password: ${PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -36,11 +39,3 @@ spring:
 
 
 
-spring:
-    config.activate.on-profile: heroku
-    datasource:
-      url: ${DATABASE_URL}
-      username: ${USER}
-      password: ${PASSWORD}
-    jpa.hibernate.ddl-auto: create
-    sql.init.mode: always
